@@ -58,3 +58,4 @@ serversocket
 repeat
 foreach
 cgi
+argconfig
