@@ -5,7 +5,7 @@ ln -sf ../argconfig.ih .
 
 case $1 in
     (o)
-        g++ -o driver *.cc ../tmp/o/*.o -lbobcat -s
+        g++ -o driver *.cc -L../tmp -largconfig -lbobcat -s
     ;;
     (c)
         g++ -o driver *.cc -lbobcat -s
