@@ -19,33 +19,51 @@ namespace
     };
 }
 
-int main(int argc, char **argv)
-try
+class X
 {
-    ArgConfig::initialize("ov:", lo, lo + 2, argc, argv);
+    ArgConfig &d_arg;
 
-    ArgConfig &arg = ArgConfig::instance();
+    public:
+        X();
+        void function();
+};
 
-    if (arg.nArgs() == 0)
+X::X()
+:
+    d_arg(ArgConfig::instance())
+{}
+
+void X::function()
+{
+    if (d_arg.nArgs() == 0)
         throw Errno("Provide the name of a config file as 1st arg");
 
-    cout << "Counting " << arg.option('o') << " instances of -o or "
+    cout << "Counting " << d_arg.option('o') << " instances of -o or "
                                                             "--option\n";
 
-    arg.open(arg[0]);       // Now open the config file explicitly
+    d_arg.open(d_arg[0]);       // Now open the config file explicitly
                             // (alternatively: use a constructor expecting 
                             // a file name)
 
-    cout << "Counting " << arg.option('o') << " instances of -o or "
+    cout << "Counting " << d_arg.option('o') << " instances of -o or "
                                                             "--option\n";
 
     string optval;
-    size_t count = arg.option(&optval, 'v');
+    size_t count = d_arg.option(&optval, 'v');
 
     cout << "Counting " << count << 
                         " instances of -v or --value-option\n";
     if (count)
         cout << "Option value = " << optval << endl;
+}
+
+int main(int argc, char **argv)
+try
+{
+    ArgConfig::initialize("ov:", lo, lo + 2, argc, argv);
+
+    X x;
+    x.function();
 
     return 0;
 }
