@@ -7,7 +7,7 @@ manpage(FBB::ArgConfig)(3bobcat)(_CurYrs_)(libbobcat1-dev__CurVers_-x.tar.gz)
 manpagename(FBB::ArgConfig)(A singleton class processing program arguments)
 
 manpagesynopsis()
-    bf(#include <bobcat/argConfig>)nl()
+    bf(#include <bobcat/argconfig>)nl()
     Linking option: tt(-lbobcat) 
 
 manpagedescription()
