@@ -12,6 +12,9 @@ bobcat (2.00.0)
   * `build install' no longer zip-compresses the html versions of the man
     pages, as per the Debian debhelper dh_compress man page.
 
+  * Hm.... ArgConfig was added to the source tree in 1.21.1, but apparently
+    I forgot to add it to the library. Now repaired.
+
 bobcat (1.21.1)
 
   * Several man-pages were updated/modified (Config, Log, Process, User, X2a)
